# dia-gems-inventory-management-system

./: .dockerignore  .gitignore  Dockerfile  README.md  deliverables.asciidoc  docker-compose.yml  er_to_relational.md  instructions.asciidoc  project-insert-dummy-data.sql  project-schema.sql  project-trigger.sql  project-triggers.sql  project-views.sql  project_inset_dummy_data.sql  project_schema.sql  pyproject.toml  test-case-trigger-1.sql  test-triggers.sql  triggers.sql
Slides/: presentation.md
diagram/: bdr_project _v3.uxf  bdr_project_v1.uxf  er_schema.uxf  er_to_relational.md
presentation/: presentation.md  slides.md
queries/: project-queries.sql  test_procedures.sql
report/: report.md
specs/: specs.md  specsEnglish.md  specsFrench.md
sql/diamonds/: 1-project-schema.sql  2-project-insert-dummy-data.sql  3-project-views.sql  4-project-triggers.sql  5-project-procedure.sql  6-project-queries.sql
src/diamonds_ui/: app.py  auth.py
src/diamonds_ui/components/: pagination.py
src/diamonds_ui/database/: counterpart.py  employee.py  white_diamond.py
src/diamonds_ui/database/action/: action.py  memo_in.py  memo_out.py  purchase.py  return_from_factory.py  return_from_lab.py  return_memo_in.py  return_memo_out.py  sale.py  transfer.py  transfer_to_factory.py  transfer_to_lab.py  transfer_to_office.py
src/diamonds_ui/database/item/: certificate.py  (+6 more)
src/diamonds_ui/pages/: about.py  inventory.py  inventory_colored_gemstones.py  item_details.py  login.py  purchases.py  returns.py  sales.py  transfers.py
src/streamlit_utils/: db.py  query_param.py
(+15 files in other folders)
