[project]
name = "project-p-wu-liao-makovskyi"
version = "0.1.0"
description = "A secure inventory and traceability platform for diamonds, colored stones and jewelry"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.52.0",
    "psycopg[binary,pool]>=3.3.0",
    "python-dotenv>=1.2.0",
    "pandas>=2.1.3",
    "pydantic>=2.12.5",
]
